replace Collectors.toList with Stream.toList